--- a/style/sass.css
+++ b/style/sass.css
@@ -6943,6 +6943,7 @@ p {
 }
 body {
   background: #fcfcfc;
+  overflow-x: hidden;
 }
 
 .menu_i {
@@ -7107,6 +7108,34 @@ body {
   letter-spacing: normal;
   text-align: left;
   color: #000;
+}
+.seccion_inicio .cont_primera_columna_inicio .cont_pie_titulo .contador_disponible {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-left: #000000 solid 1px;
+}
+.seccion_inicio .cont_primera_columna_inicio .cont_pie_titulo .contador_disponible .cont_uno {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.seccion_inicio .cont_primera_columna_inicio .cont_pie_titulo .contador_disponible .cont_uno .valor_cont_uno {
+  height: 100%;
+  width: -moz-min-content;
+  width: min-content;
+  font-family: monabold;
+  font-size: 20px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0;
 }
 .seccion_inicio .columna_video {
   overflow: hidden;
@@ -7425,18 +7454,20 @@ body {
 }
 
 .portafolios {
-  border-top: #000 1px solid;
-  border-bottom: #000 1px solid;
+  border-top: #ffffff 1px solid;
+  border-bottom: #000000 1px solid;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 110vh;
   justify-content: space-evenly;
+  overflow-x: hidden;
 }
 .portafolios .cont_titulo_portafolios {
   display: flex;
   flex-direction: row;
   padding-left: 2em;
   align-items: center;
+  background: #0e0e0e;
 }
 .portafolios .cont_titulo_portafolios .cont_uno {
   padding-right: 1em;
@@ -7450,7 +7481,7 @@ body {
   line-height: 1;
   letter-spacing: normal;
   text-align: left;
-  color: #000;
+  color: #ffffff;
 }
 .portafolios .cont_titulo_portafolios .cont_uno p {
   margin: 18px 23.3px 0 0;
@@ -7462,12 +7493,12 @@ body {
   line-height: 1;
   letter-spacing: normal;
   text-align: left;
-  color: #000;
+  color: #ffffff;
 }
 .portafolios .cont_titulo_portafolios .cont_dos_img {
   position: relative;
   display: flex;
-  border-left: #000 solid 1px;
+  border-left: #ffffff solid 1px;
 }
 .portafolios .cont_titulo_portafolios .cont_dos_img .img_uno {
   position: absolute;
@@ -7498,30 +7529,32 @@ body {
   align-items: center;
   overflow-x: hidden;
   overflow-y: hidden;
-  border-top: #000 1px solid;
+  border-top: #ffffff 1px solid;
+  background: #0e0e0e;
 }
 .portafolios .cont_mis_servicios .cont_item_mis_servicios h4 {
   margin-top: 0.5em;
   margin-left: 0.5em;
-  color: #000000;
+  color: #ffffff;
   font-family: monaextrabold;
   font-size: 50px;
   font-style: normal;
   font-weight: 600;
-  line-height: 136%;
+  line-height: 200%;
   text-transform: uppercase;
   visibility: visible;
   text-align: center;
 }
 .portafolios .cont_mis_servicios .cont_item_mis_servicios p {
   margin-right: 2em;
-  color: #000;
+  color: #ffffff;
   font-family: monalight;
   font-size: 14px;
   font-style: normal;
   font-weight: 300;
 }
 .portafolios .cont_mis_servicios .cont_item_mis_servicios .cont_slider_banderas {
+  overflow-x: hidden;
   pointer-events: none;
   display: flex;
   position: absolute;
@@ -7546,6 +7579,7 @@ body {
   transition-timing-function: cubic-bezier(0.51, 1.02, 1, 1);
 }
 .portafolios .cont_mis_servicios .cont_item_mis_servicios .cont_slider_banderas .sslider_uno img {
+  overflow-x: hidden;
   cursor: url("../assets/img/ir.svg") 15 14, auto;
   width: 30vw;
 }
@@ -7564,6 +7598,199 @@ body {
 }
 .portafolios .cont_mis_servicios .cont_item_mis_servicios:hover .cont_slider_banderas .sslider_uno img {
   filter: invert(100%);
+}
+
+.referencias_laborales {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+.referencias_laborales .colum_uno {
+  width: 75vw;
+  display: flex;
+  flex-direction: column;
+}
+.referencias_laborales .colum_uno .cont_titulo_portafolios {
+  display: flex;
+  flex-direction: column;
+  padding-left: 2em;
+  padding-top: 3em;
+  padding-bottom: 3em;
+  border-bottom: #000 1px solid;
+}
+.referencias_laborales .colum_uno .cont_titulo_portafolios h4 {
+  font-family: monabold;
+  font-size: 80px;
+  font-weight: 800;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+.referencias_laborales .colum_uno .cont_titulo_portafolios p {
+  margin: 18px 23.3px 0 0;
+  font-family: monaregular;
+  font-size: 15px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000;
+}
+.referencias_laborales .colum_uno .cont_lista_referencias {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.referencias_laborales .colum_uno .cont_lista_referencias .item_lista_referencias {
+  height: 100%;
+  border-bottom: #000 1px solid;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+.referencias_laborales .colum_uno .cont_lista_referencias .item_lista_referencias img {
+  transform: scale(0.6);
+}
+.referencias_laborales .colum_uno .cont_lista_referencias .item_lista_referencias h4 {
+  width: 40%;
+  font-family: monabold;
+  font-size: 30px;
+  font-weight: 800;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: start;
+  color: #000;
+}
+.referencias_laborales .colum_uno .cont_lista_referencias .item_lista_referencias p {
+  width: 20%;
+  font-family: monaregular;
+  font-size: 18px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: start;
+  color: #000;
+}
+.referencias_laborales .colum_dos {
+  overflow: hidden;
+  position: relative;
+  border-left: #000 1px solid;
+  border-bottom: #000 1px solid;
+  width: 25vw;
+}
+.referencias_laborales .colum_dos img {
+  position: absolute;
+  top: 0%;
+  left: -150%;
+}
+
+.cont_animacionmiskills_vertical .primer_section_inicio {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background: #f32400;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_uno {
+  border-bottom: #000 solid 1px;
+  width: 100vw;
+  height: 20vh;
+  display: flex;
+  flex-direction: row;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_uno .titulo_section_inicio {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 2em;
+  margin-right: 2em;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_uno .titulo_section_inicio p {
+  width: -moz-min-content;
+  width: min-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 30px;
+  border-radius: 248px;
+  background-color: rgba(0, 0, 0, 0.21);
+  font-family: monamedium;
+  font-size: 25px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: #fff;
+  white-space: nowrap;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_uno .subtitulo_section_inicio {
+  padding-left: 2em;
+  border-left: 1px solid black;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_uno .subtitulo_section_inicio p {
+  font-family: monaregular;
+  font-size: 18px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: justify;
+  color: #fff;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos {
+  overflow: hidden;
+  margin-left: 2em;
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos .MY-SKILLS {
+  margin-top: auto;
+  height: 80vh;
+  font-family: monabold;
+  font-size: 240px;
+  font-weight: 800;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: start;
+  color: #fff;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos .MY-SKILLS .text-style-1 {
+  color: #6d0101;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos .MY-SKILLS .text-style-2 {
+  color: #930000;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos .img-my-skills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.cont_animacionmiskills_vertical .primer_section_inicio .fila_dos .img-my-skills img {
+  transform: rotate(90deg);
 }
 
 .pie_de_pagina {
