add animacion de scroll

--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -891,11 +891,17 @@ body {
 }
 
 .cont_animacionmiskills_vertical {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
     .primer_section_inicio {
         display: flex;
         flex-direction: column;
         height: 100vh;
         background: #f32400;
+        border-bottom: #000 solid 1px;
 
         .fila_uno {
             border-bottom: #000 solid 1px;
@@ -970,7 +976,7 @@ body {
                 margin-top:auto;
                 height: 80vh;
                 font-family: monabold;
-                font-size: 240px;
+                font-size: 236px;
                 font-weight: 800;
                 font-stretch: normal;
                 font-style: normal;
@@ -990,10 +996,12 @@ body {
             }
 
             .img-my-skills{
+                border-left: #000 solid 1px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 overflow: hidden;
+
                 
                 img{
                     transform: rotate(90deg);
@@ -1003,7 +1011,115 @@ body {
 
         }
     }
+
+    .segundo_section_inicio {
+        background: #fff;
+        transform:translateY(150vh);
+        width: 100%;
+        position:absolute;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        .cont_titulo{
+            height: 25vh;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid black;
+            h4{
+                width: 80%;
+                font-family: monaextrabold;
+                font-size: 80px;
+                font-weight: 900;
+                font-stretch: normal;
+                font-style: normal;
+                line-height: 1;
+                letter-spacing: normal;
+                text-align: justify;
+                color: #000;
+                margin-left: 0.5em;
+                margin-bottom: 0px;
+            }
+    
+            .num_titulo_skils{
+                width: 20%;
+                display: flex;
+                margin-right: 0.5em;
+                margin-left: 1em;
+                border-left: 1px solid rgb(0, 0, 0);
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                p{
+                    font-family: monaextrabold;
+                    font-size: 128px;
+                    font-weight: 900;
+                    font-stretch: normal;
+                    font-style: normal;
+                    line-height: 1;
+                    letter-spacing: normal;
+                    text-align: center;
+                    color: #000;
+    
+                }
+            }
+    
+        }
+    
+        .list_skills {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            
+    
+            .item_list_skills {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                height: 100%;
+                border-bottom: 1px solid black;
+                .img_titulo_item {
+                    margin-left: 3em;
+                    display: flex;
+                    flex-direction: row;
+                    width: 40%;
+                    gap: 5em;
+                    align-items: center;
+                    img{
+                        width: 5%;
+                        filter:grayscale(100%);
+                    }
+                    h4{
+                        font-family: monabold;
+                        font-size: 30px;
+                        font-weight: 900;
+                        font-stretch: normal;
+                        font-style: normal;
+                        line-height: 1;
+                        letter-spacing:normal;
+                        text-align: center;
+                        color: #000;
+                        margin-bottom: 0px;
+                    }
+                }
+                .subtitulo {
+                    width: 20%;
+                    text-align: start;
+                }
+                .contador {
+                    margin-right: 3em;
+                }
+            }
+        }
+    }
 }
+
+
+
+
+
 
 
 
