--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -1,12 +1,14 @@
 .body_plantilla {
-    width: 100%;
+    width: 100vw;
+    overflow-x: hidden;
+
 
     .cont_inicio {
         display: flex;
         height: 90vh;
         flex-direction: row;
-        margin: 2em 5vw 2em 5vw;
-        gap: 2em;
+        border-top: 1px solid #000000;
+        border-bottom: 1px solid #0c0c0c;
 
         .colum_uno {
             position: relative;
@@ -14,63 +16,31 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            border-right: 1px solid #000000;
 
             .titulo {
                 color: #000;
-                font-family: Margo + Beuys;
+                font-family: monaextrabold;
                 font-size: 75px;
                 font-style: normal;
                 font-weight: 900;
                 line-height: 136%;
                 /* 102px */
                 text-transform: uppercase;
+                margin-left: 0.3em;
             }
 
             .parrafo {
                 color: #000;
-                font-family: poppins;
+                font-family: monamedium;
                 font-size: 15px;
                 font-style: normal;
                 font-weight: 300;
                 line-height: 136%;
                 /* 20.4px */
                 text-transform: capitalize;
-                padding-bottom: 2em;
-                border-bottom: 1px solid #414141;
-            }
-
-            .contadores {}
-
-
-            .stikerlvl {
-                rotate: 20deg;
-                position: absolute;
-                top: 10px;
-                right: 20px;
-
-                img {
-
-                    animation-name: backfloat;
-                    animation-duration: 10s;
-                    animation-iteration-count: infinite;
-                    animation-timing-function: linear;
-                }
-
-                p {
-                    text-align: center;
-                    position: absolute;
-                    top: 40px;
-                    left: 21px;
-                    color: #ffffff;
-                    font-family: Margo + Beuys;
-                    font-size: 15px;
-                    font-style: normal;
-                    font-weight: 900;
-                    line-height: 136%;
-                    /* 20.4px */
-                    text-transform: capitalize;
-
-                }
+                margin-left: 2em;
+                margin-right: 2em;
             }
         }
 
