--- a/style/sass.css
+++ b/style/sass.css
@@ -2316,14 +2316,15 @@ p {
   }
 }
 .body_plantilla {
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden;
 }
 .body_plantilla .cont_inicio {
   display: flex;
   height: 90vh;
   flex-direction: row;
-  margin: 2em 5vw 2em 5vw;
-  gap: 2em;
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #0c0c0c;
 }
 .body_plantilla .cont_inicio .colum_uno {
   position: relative;
@@ -2331,54 +2332,30 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-right: 1px solid #000000;
 }
 .body_plantilla .cont_inicio .colum_uno .titulo {
   color: #000;
-  font-family: MargoBeuys;
+  font-family: monaextrabold;
   font-size: 75px;
   font-style: normal;
   font-weight: 900;
   line-height: 136%;
   /* 102px */
   text-transform: uppercase;
+  margin-left: 0.3em;
 }
 .body_plantilla .cont_inicio .colum_uno .parrafo {
   color: #000;
-  font-family: poppins;
+  font-family: monamedium;
   font-size: 15px;
   font-style: normal;
   font-weight: 300;
   line-height: 136%;
   /* 20.4px */
   text-transform: capitalize;
-  padding-bottom: 2em;
-  border-bottom: 1px solid #414141;
-}
-.body_plantilla .cont_inicio .colum_uno .stikerlvl {
-  rotate: 20deg;
-  position: absolute;
-  top: 10px;
-  right: 20px;
-}
-.body_plantilla .cont_inicio .colum_uno .stikerlvl img {
-  animation-name: backfloat;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-.body_plantilla .cont_inicio .colum_uno .stikerlvl p {
-  text-align: center;
-  position: absolute;
-  top: 40px;
-  left: 21px;
-  color: #ffffff;
-  font-family: MargoBeuys;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 136%;
-  /* 20.4px */
-  text-transform: capitalize;
+  margin-left: 2em;
+  margin-right: 2em;
 }
 .body_plantilla .cont_inicio .columdos {
   width: 50%;
